# orbit

./: .env.example  Cargo.toml  README.md  docker-compose.yml
.aura/: last_run_metrics.json  run_history.jsonl  task_history.jsonl
.cursor/: rules.md
.github/workflows/: ci.yml
docs/: API.md  CONFIGURATION.md
migrations/: 001_create_users.sql  002_create_auth_tokens.sql  003_create_repos.sql  004_create_repo_members.sql  005_create_pull_requests.sql  006_create_audit_events.sql  007_create_jobs.sql  008_remove_users_add_org_project.sql
scripts/: dev.ps1  dev.sh
src/: app_state.rs  config.rs  db.rs  errors.rs  feed_post.rs  github_mirror.rs  internal.rs  main.rs
src/admin/: routes.rs
src/api/: discovery.rs  health.rs  mod.rs  pagination.rs  rate_limit.rs  response.rs  router.rs
src/auth/: admin_extractor.rs  extractor.rs  jwt.rs  middleware.rs  mod.rs  models.rs  password.rs  routes.rs  service.rs  token.rs
src/branches/: models.rs  routes.rs  service.rs
src/commits/: models.rs  routes.rs  service.rs
src/events/: logging.rs  mod.rs  models.rs  routes.rs  service.rs
src/git_http/: routes.rs  service.rs
src/jobs/: mod.rs  models.rs  service.rs  worker.rs
src/merge_engine/: integration_tests.rs  mod.rs  models.rs  routes.rs  service.rs  strategies.rs
src/permissions/: models.rs  routes.rs  service.rs
src/pull_requests/: models.rs  routes.rs  service.rs
src/repos/: models.rs  routes.rs  service.rs
src/storage/: git.rs  mod.rs  service.rs
src/tags/: models.rs  routes.rs  service.rs
src/users/: models.rs  routes.rs  service.rs
