[package]
name = "orbit"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
axum = "0.8"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "propagate-header"] }
tower = { version = "0.5", features = ["util"] }
governor = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tokio-util = { version = "0.7.18", features = ["io"] }
futures-util = "0.3.32"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
